--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,13 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './base/button';
+@import './base/container';
+@import './base/reset';
+@import './base/visually-hidden';
+@import './utils/variables';
+
+@import './components/gallery';
+@import './components/footer';
+@import './components/header';
+
