--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,3 +4,12 @@
 }
 
 $primary-font: 'Roboto', sans-serif;
+
+:root {
+  --primary-text-color: #000000;
+  --title-text-color: #FF6B08;
+  --secondary-title-color: #ffffff;
+  --footer-text-color: #545454;
+  --background-footer: #f7f7f7;
+  --background-body: #ffffff;
+}
