--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="container">
-    <ul class="card-collection">
+    <ul class="list cards-collection">
         
     </ul>
 </section>
