--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -2,13 +2,16 @@
     padding-left: 20px;
     padding-right: 20px;
     margin: 0 auto;
-    @media screen and (min-width: 480px) {
-        width: 440px;
+    width: 100%;
+    @media screen and (min-width: 320px) {
+        width: 320px;
     }
     @media screen and (min-width: 768px) {
-        width: 740px;
+        width: 768px;
+        padding-left: 32px;
+        padding-right: 32px;
     }
-    @media screen and (min-width: 1280px) {
-        width: 1090px;
+    @media screen and (min-width: 1024px) {
+        width: 1024px;
     }
-} 
+}
