--- a/src/partials/theme.html
+++ b/src/partials/theme.html
@@ -1,3 +1,3 @@
 <button class="theme-btn" id="toggle-theme-btn">
-  <img src="./images/theme/moon.png" alt="icon" id="toggle-theme-img" />
+  <img src="./images/theme/moon.ico" id="toggle-theme-img" />
 </button>
