--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container footer">
+  <div class="footer">
     <div class="footer__box">
       <p class="footer__text">© 2022 | All Rights Reserved |</p>
       <p class="footer__text">
