--- a/src/partials/theme.html
+++ b/src/partials/theme.html
@@ -1,3 +1,3 @@
 <button class="theme-btn" id="toggle-theme-btn">
-  <img src="./images/theme/moon.ico" id="toggle-theme-img" />
+  <img class="theme-img" src="./images/theme/moon.png" id="toggle-theme-img" width="32" />
 </button>
