Add icon to dark theme

--- a/src/partials/theme.html
+++ b/src/partials/theme.html
@@ -1,3 +1,4 @@
 <button class="theme-btn" id="toggle-theme-btn">
-  <img class="theme-img" src="./images/theme/moon.png" id="toggle-theme-img" width="32" />
+  <!-- <img class="theme-img" src="./images/theme/moon.png" id="toggle-theme-img" width="32" /> -->
+  🌙
 </button>
