--- a/src/sass/components/_theme.scss
+++ b/src/sass/components/_theme.scss
@@ -14,6 +14,9 @@ body.dark{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .theme-btn {
+  
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 30px;
   transition: 0.4s;
   position: absolute;
   top: 20px;
@@ -24,4 +27,8 @@ body.dark{
   padding: 10px;
   border-radius: 15px;
   transition: 0.3s;
+  &:hover {
+    transform:  rotate(-20deg) scale(1.25);
+    -webkit-transform: rotate(-20deg) scale(1.15);
+}
 }
