--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@
 @import './base/reset';
 @import './base/visually-hidden';
 @import './utils/variables';
-
+@import './components/pagination';
 @import './components/gallery';
 @import './components/footer';
 @import './components/header';
