fixed modal css

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,7 +9,7 @@
           &#10084 
         </span>
         by
-      <a class="team" data-modal-team-open href="#!">GoIT Students</a></p>        
+      <a class="team" data-modal-team-open href="#">GoIT Students</a></p>        
       </p>
     </div>
   </div>
