--- a/src/sass/components/_modal-team.scss
+++ b/src/sass/components/_modal-team.scss
@@ -6,8 +6,8 @@
 .team-container {
   display: grid;
   max-width: 1140px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-auto-rows: minmax(300px, auto);
+  grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+  grid-auto-rows: minmax(250px, auto);
   grid-gap: 12px;
   justify-content: center;
   padding: 0;
@@ -76,7 +76,7 @@
   background-color: #BDBDBD;
   transform: rotateY(180deg);
 }
-.clicked .front {transform: rotateY(180deg);}
+.clicked .front {transform: rotateY(360deg);}
 .clicked .back {transform: rotateY(360deg);}
 
 
@@ -116,11 +116,11 @@
 
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 586px;
+    width: 1200px;
   }
 }
 
-/* .modal__icon {
+ .modal__icon {
   padding: 0;
   width: 18px;
   height: 18px;
@@ -145,5 +145,23 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
   transition: fill 550ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+} 
 
+.backdrop {
+  padding: 93px 15px;
+  overflow-y: scroll;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(1.5);
+}
