--- a/src/sass/components/_theme.scss
+++ b/src/sass/components/_theme.scss
@@ -1,6 +1,6 @@
 .dark{
-  // background-color: rgb(104, 142, 224);
-  background:radial-gradient(ellipse at bottom, #7b7f8a 40%, #000000 100%);
+  background-color: rgb(82, 84, 87);
+  // background:radial-gradient(ellipse at bottom, #7b7f8a 40%, #000000 100%);
   --primary-text-color: #f8f1f1;
   --title-text-color: #FF6B08;
   --secondary-title-color: #ffffff;
@@ -8,19 +8,17 @@
   --background-footer: #252525;
   --background-body: #ffffff;
   color: #f7f7f7;
-}
-body.dark{
   transition: 350ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.theme-btn {
-  
+body {
+   transition: 350ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  font-size: 30px;
+}
+.theme-btn {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition: 0.4s;
   position: absolute;
-  top: 20px;
-  left: 20px;
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -31,4 +29,18 @@ body.dark{
     transform:  rotate(-20deg) scale(1.25);
     -webkit-transform: rotate(-20deg) scale(1.15);
 }
+ @media screen and (min-width: 320px) {
+      font-size: 20px;
+      top: 23vh;
+      right: 5vw;
+    }
+    @media screen and (min-width: 768px) {
+      font-size: 30px;
+       top: 20vh;
+      right: 14vw;
+    }
+    @media screen and (min-width: 1024px) {
+      top: 20vh;
+      right: 14vw;
+    }
 }
