add selected lenguage

--- a/src/partials/theme.html
+++ b/src/partials/theme.html
@@ -2,3 +2,7 @@
   <!-- <img class="theme-img" src="./images/theme/moon.png" id="toggle-theme-img" width="32" /> -->
   🌙
 </button>
+<select class="selected-lenguage">
+  <option value="/en/">🇬🇧</option>
+  <option value="/es/">🇺🇦</option>
+</select>
