--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,68 +1,68 @@
 // сброс установок браузера по-умолчанию.
 
 * {
-    padding: 0;
-    margin: 0;
-    border: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: border-b;
+  box-sizing: border-b;
 }
 
 nav,
 footer,
 header,
 aside {
-    display: block;
+  display: block;
 }
 
 html,
 body {
-    height: 100%;
-    width: 100%;
-    font-size: 100%;
-    line-height: 1;
-    font-size: 14px;
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
 }
 
 input,
 button,
 textarea {
-    font-family: inherit;
+  font-family: inherit;
 }
 
 input::-ms-clear {
-    display: none;
+  display: none;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 button::-moz-focus-inner {
-    padding: 0;
-    border: 0;
+  padding: 0;
+  border: 0;
 }
 
 a,
 a:visited {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 ul,
 li {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    vertical-align: top;
+  vertical-align: top;
 }
 
 h1,
@@ -71,241 +71,342 @@ h3,
 h4,
 h5,
 h6 {
-    font-size: inherit;
-    font-weight: 400;
+  font-size: inherit;
+  font-weight: 400;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 // стили header
 
 .header {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url(../images/header/header-mob@1.jpg);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url(../images/header/header-mob@1.jpg);
+  background-repeat: no-repeat;
+  background-color: black;
+  background-position: top;
+  width: 100%;
+  height: 230px;
+  padding-bottom: 97px;
+  padding-top: 46px;
+  margin: 0 auto;
+  position: relative;
+
+  &__my-library {
     background-repeat: no-repeat;
     background-color: black;
-    background-position: top;
+    background-position: bottom;
     width: 100%;
     height: 230px;
     padding-bottom: 97px;
     padding-top: 46px;
     margin: 0 auto;
     position: relative;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/header__my-library/my-lib-header-mob@1.jpg);
+  }
 }
-
 
 // dpr2 и 280px+
 @media (min-device-pixel-ratio: 2) and (min-width: 320px),
-(min-resolution: 192dpi) and (min-width: 320px),
-(min-resolution: 2dppx) and (min-width: 320px) {
-    .header {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url(../images/header/header-mob@2x.jpg);
+  (min-resolution: 192dpi) and (min-width: 320px),
+  (min-resolution: 2dppx) and (min-width: 320px) {
+  .header {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/header/header-mob@2x.jpg);
+
+    &__my-library {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url(../images/header__my-library/my-lib-header-mob@2x.jpg);
     }
+  }
 }
 
 .header__wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 .logo__list {
-    display: flex;
-    margin-bottom: 0;
-    padding-left: 0;
+  display: flex;
+  margin-bottom: 0;
+  padding-left: 0;
+
+  &:hover,
+  &:focus {
+    color: #ff6b08;
+    cursor: pointer;
+  }
 }
 
 .picture {
-    width: 100%;
+  width: 100%;
 }
 
 .logo__icon {
-    animation-name: icon;
-    animation-timing-function: ease;
-    animation-duration: 5000ms;
-    animation-iteration-count: infinite;
-    stroke: #818181;
-    margin-right: 10px;
+  animation-name: icon;
+  stroke: #818181;
+  margin-right: 10px;
+
+  &:hover,
+  &:focus {
+    fill: #ff6b08;
+    cursor: pointer;
+  }
 }
 
-.logo__list:hover>.logo__icon {
-    stroke: #ff6b08;
-    transition: stroke 300ms;
+.logo__list:hover > .logo__icon {
+  stroke: #ff6b08;
+  transition: stroke 300ms;
 }
 
 .logo_item:not(:last-child) {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .logotext__link {
-    display: none;
+  display: none;
+  &:hover,
+  &:focus {
+    color: #ff6b08;
+    cursor: pointer;
+  }
 }
 
 .navigation__list {
-    display: flex;
-    margin-bottom: 30px;
-    padding-left: 0;
-    align-items: center;
+  display: flex;
+  margin-bottom: 30px;
+  padding-left: 0;
+  align-items: center;
 
-    @media screen and (min-width: 768px) {
-        margin-bottom: 40px;
-    }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 40px;
+  }
 }
 
 .navigation__item:not(:last-child) {
-    margin-right: 39px;
+  margin-right: 39px;
 }
 
 .navigation__button {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 14px;
-    text-transform: uppercase;
-    color: #ffffff;
-    background-color: inherit;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: inherit;
 
-    &:hover {
-        color: darkgrey;
-        transition: color 300ms;
-    }
+  &:hover {
+    color: darkgrey;
+    transition: color 300ms;
+  }
 }
 
 .header__input {
-    width: 100%;
-    background-color: inherit;
-    border-bottom: 1px solid white;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding-bottom: 4px;
-    padding-left: 1px;
-    color: #ffffff;
+  width: 100%;
+  background-color: inherit;
+  border-bottom: 1px solid white;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-bottom: 4px;
+  padding-left: 1px;
+  color: #ffffff;
 
-    &:hover,
-    &:focus {
-        border-bottom: 1px solid #ff6b08;
-        transition: border-bottom 500ms;
-    }
+  &:hover,
+  &:focus {
+    border-bottom: 1px solid #ff6b08;
+    transition: border-bottom 500ms;
+  }
 }
 
 .header__input::placeholder {
-    font-size: 14px;
-    line-height: 16px;
-    padding-left: 1px;
+  font-size: 14px;
+  line-height: 16px;
+  padding-left: 1px;
 
-    color: #fff;
+  color: #fff;
 }
 
 .input__wrapper {
-    width: 280px;
-    height: 20px;
-    display: block;
-    box-sizing: border-box;
-    position: relative;
+  width: 280px;
+  height: 20px;
+  display: block;
+  box-sizing: border-box;
+  position: relative;
 }
 
 .input__icon {
-    position: absolute;
-    top: 4px;
-    right: 0px;
+  position: absolute;
+  top: 4px;
+  right: 0px;
 }
 
 .navigation__button.current {
-    position: relative;
+  position: relative;
 }
 
 .navigation__button.current::after {
-    position: absolute;
-    top: 13px;
-    display: block;
-    content: '';
-    height: 3px;
-    width: 100%;
-    background-color: #ff6b08;
-    margin-bottom: 20px;
+  position: absolute;
+  top: 13px;
+  display: block;
+  content: '';
+  height: 3px;
+  width: 100%;
+  background-color: #ff6b08;
+  margin-bottom: 20px;
 }
 
 // tablet
 @media screen and (min-width: 768px) {
-    .header {
-        padding-top: 41px;
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url(../images/header/header-tab@1.jpg);
+  .header {
+    padding-top: 41px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/header/header-tab@1.jpg);
+  }
 
-    }
-
-    // dpr2 и 768px
-    @media (min-device-pixel-ratio: 2) and (min-width: 768px),
+  // dpr2 и 768px
+  @media (min-device-pixel-ratio: 2) and (min-width: 768px),
     (min-resolution: 192dpi) and (min-width: 768px),
     (min-resolution: 2dppx) and (min-width: 768px) {
-        .header {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-                url(../images/header/header-tab@2x.jpg);
+    .header {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url(../images/header/header-tab@2x.jpg);
 
-        }
+      &__my-library {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+          url(../images/header__my-library/my-lib-header-tab@2x.jpg);
+      }
     }
+  }
 
-    .logotext__link {
-        display: block;
-        font-weight: 500;
-        font-size: 30px;
-        line-height: 35px;
-        color: #ffffff;
-    }
+  .logotext__link {
+    display: block;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 35px;
+    color: #ffffff;
+  }
 
-    .input__wrapper {
-        width: 336px;
-        margin: 0 auto;
-    }
+  .input__wrapper {
+    width: 336px;
+    margin: 0 auto;
+  }
 
-    .logo__list {
-        padding: 0;
-        height: 35px;
-        align-items: center;
-    }
+  .logo__list {
+    padding: 0;
+    height: 35px;
+    align-items: center;
+  }
 
-    .navigation__list {
-        padding-top: 9px;
-        margin-bottom: 41px;
-        padding-left: 0;
-        align-items: center;
-    }
+  .navigation__list {
+    padding-top: 9px;
+    margin-bottom: 41px;
+    padding-left: 0;
+    align-items: center;
+  }
 }
 
 //DESKTOP
+
 @media screen and (min-width: 1024px) {
-    .header {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url(../images/header/header-desk@1.jpg);
-    }
+  .header {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/header/header-desk@1.jpg);
 
-    .logotext__link {
-        display: block;
-        font-weight: 500;
-        font-size: 30px;
-        line-height: 35px;
-        color: #ffffff;
+    &__my-library {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url(../images/header__my-library/my-lib-header-desk@1.jpg);
+      // background-position: top;
     }
+  }
 
-    .input__wrapper {
-        width: 336px;
-        margin: 0 auto;
-    }
+  .logotext__link {
+    display: block;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 35px;
+    color: #ffffff;
+  }
 
-    // dpr2 и 1024px
-    @media (min-device-pixel-ratio: 2) and (min-width: 1024px),
+  .input__wrapper {
+    width: 336px;
+    margin: 0 auto;
+  }
+
+  // dpr2 и 1024px
+  @media (min-device-pixel-ratio: 2) and (min-width: 1024px),
     (min-resolution: 192dpi) and (min-width: 1024px),
     (min-resolution: 2dppx) and (min-width: 1024px) {
-        .header {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-                url(../images/header/header-desk@2x.jpg);
-        }
+    .header {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url(../images/header/header-desk@2x.jpg);
+
+      &__my-library {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+          url(../images/header__my-library/my-lib-header-desk@2x.jpg);
+        // background-position: top;
+      }
     }
+  }
 }
 
 input {
-    display: block;
+  display: block;
+}
+
+// стилі кнопок Wathing та Qweqwe
+
+.library-btn__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 65px;
+  opacity: 1;
+  cursor: pointer;
+
+  &.is-hidden {
+    display: none;
+    opacity: 0;
+  }
+}
+
+.library-btn {
+  width: 130.19px;
+  height: 44px;
+  left: 20px;
+  top: 121px;
+
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 5px;
+
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.3;
+  background-color: (#11ffee00);
+  text-transform: uppercase;
+
+  color: #ffffff;
+
+  &:not(:last-child) {
+    margin-right: 20px;
+  }
+
+  &:hover {
+    color: darkgrey;
+    transition: color 500ms;
+    border: 1px solid #ff6b08;
+    transition: border 500ms;
+  }
+}
+
+.library-btn.active {
+  background: #ff6b01;
+  box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
+  border: 0;
+  color: #ffffff;
 }
