--- a/src/templates/templet-team.hbs
+++ b/src/templates/templet-team.hbs
@@ -3,7 +3,7 @@
   <div class="front">
               <img
             class="team__image"
-            src="{{photo}}"
+            src="images/team/photo@1uk.jpg"
             alt="{{name}}"
           />
       <div class="team-meta">
