--- a/src/sass/components/_modal-team.scss
+++ b/src/sass/components/_modal-team.scss
@@ -7,7 +7,7 @@
   display: grid;
   max-width: 1140px;
   grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-  grid-auto-rows: minmax(250px, auto);
+  grid-auto-rows: minmax(260px, auto);
   grid-gap: 12px;
   justify-content: center;
   padding: 0;
@@ -69,13 +69,14 @@
   border-radius: 10px;
 }
 .front {
-  background-color: #FF6B08;
+  background: #cddff2;
+  
   
 }
 .back {
   padding: 20px;
-  stroke: #fdd4b87c;
-  background-color: #818181;
+ 
+  background-color: #cdcdcd;
   transform: rotateY(180deg);
 }
 .clicked .front {transform: rotateY(360deg);}
@@ -93,7 +94,8 @@
 .modal {
   position: relative;
   padding: 40px;
-  background-color: #545454;;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(24,56,214,1) 36%, rgba(120,114,173,1) 100%);
   box-shadow: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   transition: transform 550ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -126,11 +128,11 @@
   padding: 0;
   width: 18px;
   height: 18px;
-  fill: #000000;
+  fill: rgba(24,56,214,1);
 }
 
 .modal__icon:hover {
-  fill: #2196f3;
+  fill: rgba(120,114,173,1);
 }
 
 .modal__button {
@@ -169,4 +171,18 @@
 }
 body.modal-open {
   overflow: hidden;
+}
+.team__item-title {
+  text-transform: uppercase;
+  line-height: 1.14;
+  font-weight: 500;
+  margin-bottom: 8px;
+
+}
+.team__item-text {
+  margin-top: 40px;
+  color: #212121;
+  font-weight: 400;
+  line-height: 1.14;
+  margin-bottom: 10px;
 }
