--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -34,3 +34,57 @@
         flex-basis: calc((100% - 3 * 16px) / 3);
     }
 }
+
+.cards-collection-item:hover,
+.cards-collection-item:focus {
+    transform: scale(1.03);
+    box-shadow: 0px 4px 4px rgba(245, 124, 50, 0.12), 0px 4px 4px rgba(245, 124, 50, 0.12),
+            1px 4px 6px rgba(245, 124, 50, 0.12);
+}
+
+.card-poster img {
+    border-radius: 5px;
+    margin-bottom: 10px;
+    height: 402px;
+    @media screen and (min-width:768px) {
+        height: 455px;
+        margin-bottom: 8px;
+    }
+    @media screen and (min-width:1024px) {
+        height: 449px;
+    }
+}
+
+.card-info {
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.33;
+}
+
+.card-title {
+    text-transform: uppercase;
+    color: #000000;
+}
+
+.card-text {
+    color: #FF6B08;
+}
+
+.card-poster {
+    position: relative;
+}
+
+.card-vote-average {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50px;
+    height: 20px;
+    background-color: #FF6B08;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
