Film-modal-card

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,3 +15,4 @@
 @import './components/header';
 @import './components/theme';
 @import './components/modal-team';
+@import "./components/film-modal";
