--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -12,4 +12,6 @@ $primary-font: 'Roboto', sans-serif;
   --footer-text-color: #545454;
   --background-footer: #f7f7f7;
   --background-body: #ffffff;
+  --modal-text-color: #8C8C8C;
+  --secondary-bg-color: #FF6B08;
 }
