--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -1,7 +1,26 @@
 .button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 136px;
+  height: 44px;
   cursor: pointer;
-  margin: 0;
-  padding: 0;
-  border: none;
   font-family: inherit;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+  text-transform: uppercase;
+  background-color: initial;
+  border: 1px solid black;
+  border-radius: 5px;
+
+  transition-property: background-color, color, border;
+  @extend %animation;
+
+    &:hover,
+    &:focus {
+      background-color: var(--secondary-bg-color);
+      color: var(--secondary-title-color);
+      border: 1px solid var(--secondary-bg-color);
+    }
 }
