update insert movies

--- a/src/templates/list-of-movies.hbs
+++ b/src/templates/list-of-movies.hbs
@@ -5,13 +5,12 @@
         src='https://image.tmdb.org/t/p/w500{{poster_path}}'
         alt='{{title}}'
         loading='lazy'
-        height='450 px'
       />
       <span class='card-vote-average'>{{vote_average}}</span>
     </div>
     <div class='card-info'>
       <p class='card-title'>{{title}}</p>
-      <p class='card-text'>{{genreList}}</p>
+      <p class='card-text'>{{#each genres}} {{/each}} | {{release_date}}</p></p>
     </div>
   </li>
 {{/each}}
