header home btn fix and clear my library

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,13 @@
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <button class="navigation__button current home__btn" type="button">Home</button>
+            <button
+              class="navigation__button current home__btn"
+              type="button"
+              onclick="window.location.href = './index.html';"
+            >
+              Home
+            </button>
           </li>
           <li class="navigation__item">
             <button class="navigation__button my-library__btn" type="button">My library</button>
