--- a/src/partials/theme.html
+++ b/src/partials/theme.html
@@ -3,6 +3,7 @@
   🌙
 </button>
 <select class="selected-lenguage">
-  <option value="/en/">🇬🇧</option>
-  <option value="/es/">🇺🇦</option>
+  <option class="leng">Сhoose language</option>
+  <option value="/en/">English 🇬🇧</option>
+  <option value="/es/">Українська 🇺🇦</option>
 </select>
