--- a/src/sass/components/_theme.scss
+++ b/src/sass/components/_theme.scss
@@ -29,9 +29,14 @@ body {
     transform: rotate(-20deg) scale(1.25);
     -webkit-transform: rotate(-20deg) scale(1.15);
   }
+  @media screen and (max-width: 320px) {
+    font-size: 20px;
+    top: 160px;
+    right: 5%;
+  }
   @media screen and (min-width: 320px) {
     font-size: 20px;
-    top: 150px;
+    top: 155px;
     right: 5%;
   }
   @media screen and (min-width: 768px) {
@@ -54,21 +59,30 @@ body {
 }
 
 .selected-lenguage {
+ 
+  cursor: pointer;
   background-color: transparent;
   color: currentColor;
-  font-size: 23px;
+  font-size: 16px;
+  outline-style: none;
+  border: none;
   text-decoration: none;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
    position: absolute;
+    color: #f0b58f;
+   @media screen and (max-width: 320px) {
+    top: 165px;
+    right: 20%;
+  }
   @media screen and (min-width: 320px) {
     top: 165px;
-    right: 10%;
+    right: 15%;
   }
   @media screen and (min-width: 768px) {
     top: 165px;
-    right: 10%;
+    right: 12%;
   }
   @media screen and (min-width: 1024px) {
     top: 165px;
@@ -82,4 +96,7 @@ body {
     top: 165px;
     right: 35%;
   }
+    transition: 700ms;
+  transition-timing-function: cubic-bezier(0.9, 0, 0.2, 1);
+
 }
