--- a/src/sass/components/_modal-team.scss
+++ b/src/sass/components/_modal-team.scss
@@ -110,7 +110,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(1.1);
   }
 }
 
@@ -122,6 +122,9 @@
 
 @media screen and (min-width: 1200px) {
   .modal {
+    top: 50%;
+    left: 50%;
+    transform: translate(-65%, -50%) scale(1.1);
     width: 1200px;
   }
 }
@@ -169,7 +172,9 @@
 .is-hidden {
   opacity: 0;
   pointer-events: none;
-  transform: translate(-50%, -50%) scale(1.5);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.8);
 }
 body.modal-open {
   overflow: hidden;
@@ -188,7 +193,4 @@ body.modal-open {
   font-weight: 400;
   line-height: 1.14;
   margin-bottom: 10px;
-}
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(1.1);
 }
