--- a/src/templates/list-of-movies.hbs
+++ b/src/templates/list-of-movies.hbs
@@ -10,7 +10,7 @@
     </div>
     <div class='card-info'>
       <p class='card-title'>{{title}}</p>
-      <p class='card-text'>{{#each genres}} {{/each}} | {{release_date}}</p></p>
+      <p class='card-text'>{{#each genres}} {{name}} {{/each}} | {{release_date}}</p></p>
     </div>
   </li>
 {{/each}}
