--- a/src/sass/components/_theme.scss
+++ b/src/sass/components/_theme.scss
@@ -1,12 +1,13 @@
 .dark {
-  background-color: rgb(82, 84, 87);
-  // background:radial-gradient(ellipse at bottom, #7b7f8a 40%, #000000 100%);
-  --primary-text-color: #f8f1f1;
+  background-color: rgb(80, 75, 68);
+  // background:radial-gradient(ellipse at bottom, #7b7f8a 10%, #000000 100%);
+  --primary-text-color: #696666;
   --title-text-color: #ff6b08;
-  --secondary-title-color: #ffffff;
-  --footer-text-color: #dcdceb;
+  --secondary-title-color: #2c0b0b;
+  --footer-text-color: #8b887f;
   --background-footer: #252525;
-  --background-body: #ffffff;
+  --background-body: #79716a;
+    --modal-text-color: #f5e9c2;
   color: #f7f7f7;
   transition: 350ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
