mobile menu open/close btn

--- a/src/partials/search-form.html
+++ b/src/partials/search-form.html
@@ -1,7 +1,7 @@
 <div>
 <button class="search-form-btn">Filter
-    <svg class="icon icon-equalizer">
-        <use xlink:href="./images/sprite.svg#icon-equalizer"></use>
+    <svg class="icon-droplet" width="14" height="14">
+        <use href="./images/svg/search-form.svg#icon-equalizer"></use>
     </svg>
 </button>
 
