--- a/src/sass/components/_modal-team.scss
+++ b/src/sass/components/_modal-team.scss
@@ -1,6 +1,6 @@
 :root {
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  --animation-duration: 250ms;
+  --animation-duration: 200ms;
 }
 
 .team-container {
@@ -20,19 +20,19 @@
 .team__item {
   padding: 10px;
   
-  padding: 10px;
+  border-radius: 10px;
   overflow: hidden;
   position: relative;
   cursor: pointer;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-  perspective: 1000px;
+  
+  perspective: 600px;
   text-align: center;
 }
 
 .team__item:hover {
-  transform: scale(1.03);
+  transform: scale(1.05);
   transition: transform var(--animation-duration) var(--timing-function);
+  box-shadow: 0px 0px 2px 0px rgba(255, 127, 27, 0.88);
 }
 
 .team__image {
@@ -62,21 +62,20 @@
   height: 100%;
   left: 0;
   top: 0;
-
-
+  box-shadow: 2px 2px 2px 2px rgba(255, 126, 27, 0.30);
   transition: 1s;
   backface-visibility: hidden;
   border-radius: 10px;
 }
 .front {
-  background: #cddff2;
+  background: #ffffff;
   
   
 }
 .back {
   padding: 20px;
  
-  background-color: #cdcdcd;
+  background-color: #f5f3f3;
   transform: rotateY(180deg);
 }
 .clicked .front {transform: rotateY(360deg);}
@@ -93,12 +92,13 @@
   transform: translate(-50%, -50%) scale(1);
 }
 
+    
 .modal {
   position: relative;
   padding: 40px;
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(24,56,214,1) 36%, rgba(120,114,173,1) 100%);
-  box-shadow: 1px solid rgba(0, 0, 0, 0.1);
+  
+  background-color: #b8b4a7;
+  box-shadow: 1px solid rgba(255, 127, 27, 0.88);
   border-radius: 4px;
   transition: transform 550ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-left: auto;
@@ -133,11 +133,11 @@
   padding: 0;
   width: 18px;
   height: 18px;
-  fill: rgba(24,56,214,1);
+  fill: #f0b58f;
 }
 
 .modal__icon:hover {
-  fill: rgba(120,114,173,1);
+  fill: #ff6b08;
 }
 
 .modal__button {
@@ -181,7 +181,7 @@ body.modal-open {
 }
 .team__item-title {
   text-transform: uppercase;
-  color: rgba(24,56,214,1);
+  color: #ff6b08;
   line-height: 1.14;
   font-weight: 500;
   margin-bottom: 8px;
