--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,4 +17,5 @@
 @import './components/modal-team';
 @import "./components/film-modal";
 @import './components/search-form';
+@import "./components/scrolltop";
 
