--- a/src/partials/search-form.html
+++ b/src/partials/search-form.html
@@ -1,36 +1,36 @@
-<div>
-<button class="search-form-btn">Filter
+<div class="search-filter-form">
+  <button class="search-form-btn">
+    Filter
     <svg class="icon icon-equalizer">
-        <use xlink:href="./images/sprite.svg#icon-equalizer"></use>
+      <use xlink:href="./images/sprite.svg#icon-equalizer"></use>
     </svg>
-</button>
+  </button>
 
-<div class="search-form__wrap">
+  <div class="search-form__wrap">
     <form class="genre-search" action="#" id="search-form">
-        <label for="lang" class="search-label">Genres</label>
-        <select name="genres" id="genres">
+      <label for="lang" class="search-label">Genres</label>
+      <select name="genres" id="genres">
         <legend></legend>
-            <option value="genres">all genres</option>
-        </select>
+        <option value="genres">all genres</option>
+      </select>
 
-        <label for="lang" class="search-label">Year</label>
-        <select name="genres" id="years">
-            <legend></legend>
-            <option class="first-opt" id="year-chose" value="year">year</option>
-            <option value="2022">2022</option>
-            <option value="2021">2021</option>
-            <option value="2020">2020</option>
-            <option value="2019">2019</option>
+      <label for="lang" class="search-label">Year</label>
+      <select name="genres" id="years">
+        <legend></legend>
+        <option class="first-opt" id="year-chose" value="year">year</option>
+        <option value="2022">2022</option>
+        <option value="2021">2021</option>
+        <option value="2020">2020</option>
+        <option value="2019">2019</option>
+      </select>
 
-        </select>
-
-        <label for="lang" class="search-label">Popularity</label>
-        <select name="genres" id="popularity">
-            <legend></legend>
-            <option value="option">popularity</option>
-            <option value="popularity">most popular first</option>
-            <option value="vote_count">users choise first</option>
-        </select>
+      <label for="lang" class="search-label">Popularity</label>
+      <select name="genres" id="popularity">
+        <legend></legend>
+        <option value="option">popularity</option>
+        <option value="popularity">most popular first</option>
+        <option value="vote_count">users choise first</option>
+      </select>
     </form>
-</div>
+  </div>
 </div>
