--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,11 +7,11 @@ $primary-font: 'Roboto', sans-serif;
 
 :root {
   --primary-text-color: #000000;
-  --title-text-color: #FF6B08;
+  --title-text-color: #ff6b08;
   --secondary-title-color: #ffffff;
   --footer-text-color: #545454;
   --background-footer: #f7f7f7;
   --background-body: #ffffff;
-  --modal-text-color: #8C8C8C;
-  --secondary-bg-color: #FF6B08;
+  --modal-text-color: #8c8c8c;
+  --secondary-bg-color: #ff6b08;
 }
