--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -2,8 +2,9 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 136px;
+  width: 110px;
   height: 44px;
+  padding: 0px 10px;
   cursor: pointer;
   font-family: inherit;
   font-weight: 500;
@@ -16,6 +17,14 @@
 
   transition-property: background-color, color, border;
   @extend %animation;
+
+  @media screen and (min-width: 768px) {
+    width: 125px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 136px;
+  }
 
     &:hover,
     &:focus {
