--- a/src/templates/film-modal.hbs
+++ b/src/templates/film-modal.hbs
@@ -1,34 +1,41 @@
-{{!-- <div class="film-modal">
-  <button type="button" class="film-modal-close">X</button>
-    <div class="film-modal-wrapper">
-        <img src="" alt="" />
-        <h2 class="film-modal-header"></h2>
-            <ul class="film-modal-info">
-                <li class="film-modal-item">
-                    <p>Vote / Votes</p>
-                    <p>
-                    <span></span>
-                    /
-                    </p>
-                </li>
-                <li class="film-modal-item">
-                    <p>Popularity</p>
-                    <p></p>
-                </li>
-                <li class="film-modal-item">
-                    <p>Original Title</p>
-                    <p></p>
-                </li>
-                <li class="film-modal-item">
-                    <p>Genre</p>
-                    <p></p>
-                </li>
-            </ul>
-            <h3>ABOUT</h3>
-            <p></p>
-        <div class="film-modal-btns">
-            <button type="button">add to Watched</button>
-            <button type="button">add to queue</button>
+{{!-- <div class="film-modal" data-id=${id}>
+        <div class="film-poster-wrapper">
+          <img class="film-poster-img" src="https://image.tmdb.org/t/p/w500/${poster_path}" alt="${title}"/>
         </div>
-    </div>
-  </div> --}}
+        <div class="film-info-wrapper">
+          <h2 class="film-modal-header">${title}</h2>
+          <ul class="film-modal-info">
+            <li class="film-modal-item">
+              <p class="film-item-title">Vote / Votes</p>
+              <p class="film-item-desc">
+                <span class="vote-mod color">${vote_average}</span>
+                / <span class="vote-mod">${vote_count}</span>
+              </p>
+            </li>
+            <li class="film-modal-item">
+              <p class="film-item-title">Popularity</p>
+              <p class="film-item-desc">${popularity}</p>
+            </li>
+            <li class="film-modal-item">
+              <p class="film-item-title">Original Title</p>
+              <p class="film-item-desc original-title">${original_title}</p>
+            </li>
+            <li class="film-modal-item">
+              <p class="film-item-title">Genre</p>
+              <p class="film-item-desc genre-desc">${genre_ids}</p>
+            </li>
+          </ul>
+          <h3 class="film-modal-about original-title">ABOUT</h3>
+          <p class="film-modal-overview">${overview}</p>
+          <div class="film-modal-btns">
+            <button class="modal-btn-watched" type="button">add to Watched</button>
+            <button class="modal-btn-queue" type="button">add to queue</button>
+          </div>
+      </div>    
+          <button class="film-modal-close" type="button">
+            <svg class="modal-close-ico" width="30" height="30" viewBox="0 0 30 30">
+              <path class="modal-close-ico" d="M8 8L22 22" stroke="black" stroke-width="2"></path>
+              <path class="modal-close-ico" d="M8 22L22 8" stroke="black" stroke-width="2"></path>
+            </svg>
+          </button>
+        </div> --}}
