--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -19,6 +19,7 @@
     cursor: pointer;
     transform: scale(1);
     transition: transform 250ms linear;
+    border-radius: 5px;
     @media screen and (max-width:767px) {
         &:not(:last-child){
             margin-bottom: 20px;
@@ -43,6 +44,8 @@
 }
 
 .card-poster img {
+    width: 100%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 5px;
     margin-bottom: 10px;
     height: 402px;
