--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -201,7 +201,7 @@ body {
   padding-bottom: 4px;
   padding-left: 1px;
   color: #ffffff;
-  border: none;
+  // border: none;
   outline: none;
 
   &:hover,
