--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,7 +27,7 @@
         </ul>
       </nav>
     </div>
-    <form class="input__wrapper search-form" id="search-form">
+    <form class="input__wrapper search-form">
       <input
         class="header__input"
         type="text"
