add gradient to the background

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -47,11 +47,12 @@
       </button>
       <button id="queue-lang" class="library-btn queue-btn" type="button">Queue</button>
     </div>
-    <button class="theme-btn" id="toggle-theme-btn">🌙</button>
+
     <div class="header-lang__btn">
-      <button class="translate" id="e-lang-en">En</button>
+      <button class="theme-btn" id="toggle-theme-btn">🌙</button>
+      <button class="translate" id="e-lang-en">EN</button>
       <span class="translate__span">|</span>
-      <button class="translate" id="e-lang-ua">Ua</button>
+      <button class="translate" id="e-lang-ua">UA</button>
     </div>
   </div>
 </header>
