--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -41,7 +41,7 @@
     font-size: 14px;
   }
   margin-left: 5px;
-  color: #545454;
+  color: #f1b361;
   font-size: 16px;
   font-weight: 400;
   font-style: normal;
