--- a/src/sass/components/_search-form.scss
+++ b/src/sass/components/_search-form.scss
@@ -1,4 +1,4 @@
-.search-form-btn {
+.search-btn {
     position: relative;
 
     display: flex;
@@ -7,7 +7,7 @@
     margin: 20px;
     padding: 10px 30px;
 
-    color: #ff6b08;
+    color: #f07829;
     background-color: inherit;
     box-shadow: 1px 1px 8px 1px rgba(255, 127, 27, 0.88);
 
@@ -24,13 +24,13 @@
 }
 }
 
+
 .icon-droplet {
 
     display: inline-block;
     width: 1em;
     height: 1em;
 
-    margin-left: 16px;
     stroke-width: 0;
     stroke: currentColor;
     fill: currentColor;
@@ -53,16 +53,13 @@
 
     @media screen and (max-width:767px) {
     display: block;
-    padding: 30px 30px;
 
-        background-color: #ffffff;
-
-        border-bottom: 3px solid rgba(254, 136, 19, 0.35);
-        border-radius: 16px 0px 32px 0px;
+    background-color: #ffffff;
+    border-bottom: 3px solid rgba(254, 136, 19, 0.35);
     z-index: 99;
 
     position: absolute;
-    top: 20;
+    top: 50%;
     left: 0;
     width: 100%;
     height: 100%;
